flapivor/tests/m3/hopix/typechecker/good/10-local-definition.hopix
val main : Int =
    val x : Int = 1;
    x