flapivor/tests/m3/hopix/typechecker/bad/60-assignment-is-unit.hopix
val r : Ref<Int> = ref 0

val main : Int = r := 33

